--- a/apps/desktop/src/locales/en/messages.json
+++ b/apps/desktop/src/locales/en/messages.json
@@ -1416,6 +1416,9 @@
   "autoPromptTouchId": {
     "message": "Ask for Touch ID on app start"
   },
+  "unlockWithMasterPassword": {
+    "message": "Unlock with master password"
+  },
   "requirePasswordOnStart": {
     "message": "Require password or PIN on app start"
   },
