PM-5242 - First working draft of copying out web CL implementation of user verification form and dialog components into standalone libs/auth components which could be used in any client.

--- a/apps/web/src/locales/en/messages.json
+++ b/apps/web/src/locales/en/messages.json
@@ -7083,6 +7083,14 @@
       }
     }
   },
+  "defaultUserVerificationDialogTitle" : {
+    "message": "Verification required",
+    "description": "Default title for the user verification dialog."
+  },
+  "defaultUserVerificationDialogConfirmBtnText" : {
+    "message": "Submit",
+    "description": "Default confirm button text for the user verification dialog."
+  },
   "recoverAccount": {
     "message": "Recover account"
   },
