--- a/apps/web/src/locales/en/messages.json
+++ b/apps/web/src/locales/en/messages.json
@@ -1357,6 +1357,10 @@
     "message": "If you don't have any data to import, you can create a ",
     "description": "This will be part of a larger sentence, that will read like this: If you don't have any data to import, you can create a new item here. You may need to wait until your administrator confirms your organization membership."
   },
+  "onboardingImportDataDetailsLink": {
+    "message": "new item",
+    "description": "This will be part of a larger sentence, that will read like this: If you don't have any data to import, you can create a new item here. You may need to wait until your administrator confirms your organization membership."
+  },
   "onboardingImportDataDetailsPartTwo": {
     "message": " here. You may need to wait until your administrator confirms your organization membership.",
     "description": "This will be part of a larger sentence, that will read like this: If you don't have any data to import, you can create a new item here. You may need to wait until your administrator confirms your organization membership."
