--- a/apps/web/src/locales/fil/messages.json
+++ b/apps/web/src/locales/fil/messages.json
@@ -657,7 +657,7 @@
     "message": "Passkey successfully created!"
   },
   "customName": {
-    "message": "Name"
+    "message": "Custom Name"
   },
   "customPasskeyNameInfo": {
     "message": "Name your passkey to help you identify it."
