PM-5242 - UserVerificationFormInput - Biometrics flow on desktop - remove accidentally added period in couldNotCompleteBiometrics translation key.

--- a/apps/desktop/src/locales/en/messages.json
+++ b/apps/desktop/src/locales/en/messages.json
@@ -1895,7 +1895,7 @@
   "awaitingConfirmation": {
     "message": "Awaiting confirmation"
   },
-  "couldNotCompleteBiometrics.": {
+  "couldNotCompleteBiometrics": {
     "message": "Could not complete biometrics."
   },
   "needADifferentMethod": {
