PM-5242 - Remove accidental period from translation keys on browser & web

--- a/apps/browser/src/_locales/en/messages.json
+++ b/apps/browser/src/_locales/en/messages.json
@@ -2666,7 +2666,7 @@
   "awaitingConfirmation": {
     "message": "Awaiting confirmation"
   },
-  "couldNotCompleteBiometrics.": {
+  "couldNotCompleteBiometrics": {
     "message": "Could not complete biometrics."
   },
   "needADifferentMethod": {
