--- a/apps/web/src/locales/en/messages.json
+++ b/apps/web/src/locales/en/messages.json
@@ -6616,7 +6616,7 @@
   "awaitingConfirmation": {
     "message": "Awaiting confirmation"
   },
-  "couldNotCompleteBiometrics.": {
+  "couldNotCompleteBiometrics": {
     "message": "Could not complete biometrics."
   },
   "needADifferentMethod": {
