PM-5242 - Clean up translations - (1) Remove unused defaultUserVerificationDialogConfirmBtnText (2) Refactor name of defaultUserVerificationDialogTitle to just be verificationRequired which matches existing naming conventions.

--- a/apps/web/src/locales/en/messages.json
+++ b/apps/web/src/locales/en/messages.json
@@ -7119,7 +7119,7 @@
       }
     }
   },
-  "defaultUserVerificationDialogTitle" : {
+  "verificationRequired" : {
     "message": "Verification required",
     "description": "Default title for the user verification dialog."
   },
