--- a/apps/desktop/src/locales/en/messages.json
+++ b/apps/desktop/src/locales/en/messages.json
@@ -1547,13 +1547,9 @@
     "message": "Your organization requires you to set a master password.",
     "description": "Used as a card title description on the set password page to explain why the user is there"
   },
-  "defaultUserVerificationDialogTitle" : {
+  "verificationRequired" : {
     "message": "Verification required",
     "description": "Default title for the user verification dialog."
-  },
-  "defaultUserVerificationDialogConfirmBtnText" : {
-    "message": "Submit",
-    "description": "Default confirm button text for the user verification dialog."
   },
   "currentMasterPass": {
     "message": "Current master password"
