missing pipe for flag observable

--- a/apps/web/src/locales/en/messages.json
+++ b/apps/web/src/locales/en/messages.json
@@ -1359,7 +1359,7 @@
     "description": "This will be part of a larger sentence, that will read like this: If you don't have any data to import, you can create a new item here. You may need to wait until your administrator confirms your organization membership."
   },
   "onboardingImportDataDetailsPartTwo": {
-    "message": " here. You may need to wait until your administrator confirms your organization membership.",
+    "message": " instead. You may need to wait until your administrator confirms your organization membership.",
     "description": "This will be part of a larger sentence, that will read like this: If you don't have any data to import, you can create a new item here. You may need to wait until your administrator confirms your organization membership."
   },
   "importError": {
