feat: add view collection string, update button text, refs AC-2086

--- a/apps/web/src/locales/en/messages.json
+++ b/apps/web/src/locales/en/messages.json
@@ -7605,5 +7605,8 @@
   },
   "providerPortal": {
     "message": "Provider Portal"
+  },
+  "viewCollection": {
+    "message": "View collection"
   }
 }
