add stories for elements that require an action to display

--- a/libs/components/src/stories/kitchen-sink/kitchen-sink.mdx
+++ b/libs/components/src/stories/kitchen-sink/kitchen-sink.mdx
@@ -10,6 +10,6 @@ NOTE: Best viewed in either Light or Dark mode (not both at the same time).
 
 The purpose of this story is to compose together all of our components. When snapshot tests run,
 we'll be able to spot-check visual changes in a more app-like environment than just the isolated
-stories.
+stories. The stories for the Kitchen Sink exist to be tested by the Chromatic UI tests.
 
 <Primary />
